--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,108 @@
-.active {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css');
+
+:root {
+    --primary: #feb236;
+    --secondary: #6b5b95;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    padding: 20px;
+    background: var(--secondary);
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    padding-bottom: 5px;
+    border-bottom: 3px solid var(--primary);
+}
+
+header nav a {
+    text-decoration: none;
+    padding: 6px;
+    border-radius: 4px; 
+}
+
+nav a.active {
+    background: var(--primary);
+}
+
+p {
+    margin: 20px 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 40px auto;
+}
+
+main {
+    padding: 20px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+/* help layout */
+.help-layout nav {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    margin: 20px 0;
+}
+
+.help-layout nav a {
+    border: 2px solid #fff;
+    padding: 10px;
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+.faq .question {
+    background: rgba(0, 0, 0, 0.3);
+    padding: 15px 30px;
+    border-radius: 4px;
+    margin: 20px 0;
+}
+
+/* contact */
+form {
+    margin-top: 25px;
+}
+
+form input, form label, form textarea {
+    display: block;
+}
+
+form input, form textarea {
+    margin-bottom: 30px;
+    padding: 10px;
+    border-radius: 4px;
+    border: 0;
+    width: 300px;
+}
+
+form label {
+    margin-bottom: 10px;
+}
+
+form button {
+    border: 0;
+    padding: 10px;
+    border-radius: 4px;
+    color: #fff;
+    background: var(--primary);
+    cursor: pointer;
 }
