--- a/src/index.css
+++ b/src/index.css
@@ -125,3 +125,14 @@ form button {
 .users .card a {
     font-size: 30px;
 }
+
+/* user details */
+.user-details {
+    padding: 10px;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.user-details ul {
+    padding: 30px;
+}
